@@ -7,6 +7,13 @@
   <title>Weather App</title>
 </head>
 <body>
+  <div class="location-form">
+    <form>
+        <label for="location-name">Location:</label>
+        <input type="text" id="location-name" name="location-name">
+        <input type="submit" value="Submit">
+    </form>
+  </div>
   <div class="overlay"></div>
   <div class="main-wrapper">
     <div class="header">
@@ -40,7 +47,7 @@
               </div>
             </div>
             <div class="day-content" id="tomorrow">
-              <div class="day-title">Tomorrow</div>
+              <div class="day-title">Overtomorrow</div>
               <div class="day-details">
                 <img class="weather-image" src="sun.png">
                 <div class="temperature">40ºC</div>
